[WFCORE-4296] Illegal Reflective Access
Jira: https://issues.redhat.com/browse/WFCORE-4296